--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="popup.css">
-	<link href="../vendor/inter.css" rel="stylesheet">
+	<link href="vendor/inter.css" rel="stylesheet">
 </head>
 <body>
     <div id="main_popup">
@@ -46,7 +46,7 @@
 				</div>
 				<div class="">
 					<h2>Recording Length</h2>
-					<div class="slidecontainer" style="">
+					<div class="slidecontainer">
 					  <input type="range" min="20" max="120" value="56" class="slider" id="recordingLength">
 					</div>
 					<div id="recordingLengthText"></div>
@@ -214,8 +214,8 @@
     {{/history}}
 </script>-->
 
-<script type="text/javascript" src="../vendor/jquery.min.js"></script>
-<script type="text/javascript" src="../vendor/mustache.min.js"></script>
+<script type="text/javascript" src="vendor/jquery.min.js"></script>
+<script type="text/javascript" src="vendor/mustache.min.js"></script>
 <script type="text/javascript" src="popup.js"></script>
 <script type="text/javascript" src="canvas.js"></script>
 </html>
