--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,10 +10,10 @@
             <h1></h1>
         </div>
         <div id="main_content">
+            <canvas id="canvas"></canvas>
             <img class="up_button up_right_button" id="settings_button" show-on show-on-initial src="../../icons/Settings.svg" />
             <img class="up_button up_left_button" button-initial show-on show-on-lyrics show-on-settings src="../../icons/Arrow.svg" style="display:none;"/>
             <div id="initial_screen" class="screen">
-				<div><canvas id="canvas" /></div>
                 <div class="audio-bands">
                     <img class="audio-band big 0" src="../../img/audio-band.png" />
                     <img class="audio-band med 1" src="../../img/audio-band.png" />
