--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -12,8 +12,8 @@
         <div id="main_content">
             <img class="up_button up_right_button" id="settings_button" show-on show-on-initial src="../../icons/Settings.svg" />
             <img class="up_button up_left_button" button-initial show-on show-on-lyrics show-on-settings src="../../icons/Arrow.svg" style="display:none;"/>
-            <canvas id="canvas"></canvas>
             <div id="initial_screen" class="screen">
+				<canvas id="canvas"></canvas>
                 <div class="audio-bands">
                     <img class="audio-band big 0" src="../../img/audio-band.png" />
                     <img class="audio-band med 1" src="../../img/audio-band.png" />
@@ -38,7 +38,7 @@
                     <p><a href="https://addons.mozilla.org/en-US/firefox/addon/audd/privacy/" target="_blank">Privacy Policy</a></p>
                     <div class="consent-buttons">
                         <button id="consent_accept" class="button button--outline button--primary">Accept</button>
-                        <button id="consent_reject" class="button button--outline" style="margin-left:10px;">Reject &amp; Uninstall</button>
+                        <button id="consent_reject" class="button button--outline button--secondary" style="margin-left:10px;">Reject &amp; Uninstall</button>
                     </div>
                 </div>
             </div>
