--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -33,8 +33,8 @@
             <div id="consent_screen" class="screen">
                 <div class="consent-content">
                     <h1>Consent Required</h1>
-                    <p>AudD, LLC certifies that the data processed by the extension and by AudD is not used or transferred for purposes that are unrelated to the extension's core functionality, which is music recognition.</p>
-                    <p>When invoked, the extension records up to 12 seconds of audio that's playing on the current browser tab in order to submit it to AudD (music recognition API). The audio is transmitted to AudD servers for music identification. The audio is not stored after the music recognition is complete. AudD might store digital fingerprints of the audio for up to two weeks. The extension, together with the audio, will send its version, the tab title, and the tab URL to AudD. AudD does not share that data with third parties and uses it to prevent abuse of the music recognition API that it provides.</p>
+                    <p>Firefox requires us to show you this consent screen, even though we don't think it is neccessary, as the data processed is not used or transferred for purposes that are unrelated to the extension's core functionality.</p>
+                    <p>When invoked, the extension records up to 12 seconds of audio that's playing on the current browser tab in order to submit it to AudD (music recognition API). The audio is transmitted to AudD servers for music identification. The audio is not stored after the music recognition is complete. AudD might store digital fingerprints of the audio for up to two weeks. The extension, together with the audio, will send its version, the tab title, and the tab URL to AudD; AudD does not share that data with third parties and uses it solely to prevent abuse.</p>
                     <p><a href="https://addons.mozilla.org/en-US/firefox/addon/audd/privacy/" target="_blank">Privacy Policy</a></p>
                     <div class="consent-buttons">
                         <button id="consent_accept" class="button button--outline button--primary">Accept</button>
